plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.movie.catalog'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.1'
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '7.0.1.Final'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.6'}

test {
    useJUnitPlatform()
}
